@@ -1,3 +1,7 @@
+shmuel 25.08.2016 13:27:23 +0200 - build 4767
+
+1. MacroAPI: вызов Editor.Set(0) выставлял длину таба равной нулю, что в дальнейшем приводило к падению.
+
 drkns 25.08.2016 00:57:25 +0200
 
 1. Продолжение валидации шапок.
